--- a/app/globals.css
+++ b/app/globals.css
@@ -113,3 +113,51 @@ input[type="search"] {
     @apply absolute -top-2 left-2 -mt-px inline-block px-1 bg-white text-xs font-medium text-gray-900 text-[1rem];
   }
 }
+
+@layer utilities {
+  @keyframes drawLineTop {
+    0% {
+      width: 0;
+    }
+    100% {
+      width: 100%; /* This 100% now refers to the calc(100%+1px) on the element */
+    }
+  }
+  @keyframes drawLineRight {
+    0% {
+      height: 0;
+    }
+    100% {
+      height: 100%; /* This 100% now refers to the calc(100%+1px) on the element */
+    }
+  }
+  @keyframes drawLineBottom {
+    0% {
+      width: 0;
+    }
+    100% {
+      width: 100%; /* This 100% now refers to the calc(100%+1px) on the element */
+    }
+  }
+  @keyframes drawLineLeft {
+    0% {
+      height: 0;
+    }
+    100% {
+      height: 100%; /* This 100% now refers to the calc(100%+1px) on the element */
+    }
+  }
+
+  .animate-drawLineTop {
+    animation: drawLineTop 0.6s linear forwards;
+  }
+  .animate-drawLineRight {
+    animation: drawLineRight 0.6s linear 0.6s forwards;
+  }
+  .animate-drawLineBottom {
+    animation: drawLineBottom 0.6s linear 1.2s forwards;
+  }
+  .animate-drawLineLeft {
+    animation: drawLineLeft 0.6s linear 1.8s forwards;
+  }
+}
